--- a/code/Dockerfile
+++ b/code/Dockerfile
@@ -1,12 +1,13 @@
 ### Build
 FROM golang:1.19-buster AS build
+ARG VERSION=1.0.0
 WORKDIR /app
 
-COPY code/go.mod ./
+COPY go.mod ./
 RUN go mod download && go mod verify
 
-COPY code/*.go ./
-RUN CGO_ENABLED=0 GOOS=linux go build -ldflags "-X main.version=1.0.0" -o /bin/go-demo .
+COPY *.go ./
+RUN CGO_ENABLED=0 GOOS=linux go build -ldflags "-X main.version=${VERSION}" -o /bin/go-demo .
 
 ### Deploy
 FROM alpine:3.16.2
