--- a/charts/go-demo/values.yaml
+++ b/charts/go-demo/values.yaml
@@ -18,18 +18,22 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
+deployment:
+  image:
+    blue:
+      repository:
+      tag:
+    green:
+      repository:
+      tag:
+  livenessProbe:
+    path: /demo/info
+  readinessProbe:
+    path: /demo/info
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
-
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
 
 podAnnotations: {}
 
@@ -50,21 +54,23 @@ service:
 
 ingress:
   enabled: true
-  className: ""
+  className: "nginx"
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
     - host: domain.com
-      serviceName:
-      servicePort:
       paths:
-        - path: /
-          pathType: ImplementationSpecific
+        - path: /demo
+          pathType: Prefix
+          serviceName: go-demo-dev-prd
+          servicePort: 80
     - host: stage.domain.com
       paths:
-        - path: /
-          pathType: ImplementationSpecific
+        - path: /demo
+          pathType: Prefix
+          serviceName: go-demo-dev-stage
+          servicePort: 80
 
   tls: []
   #  - secretName: chart-example-tls
